[gd_scene load_steps=5 format=2]

[ext_resource path="res://Altar.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 32.101, 32.1303 )

[sub_resource type="ParticlesMaterial" id=3]

emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
gravity = Vector3( 0, -100, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 40.0
radial_accel = 22.64
scale = 2.5

[node name="Altar" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.517647, 0.611765, 0.721569, 1 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 40
process_material = SubResource( 3 )

[node name="FinishSacrificeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="FinishSacrificeTimer" to="." method="_on_FinishSacrificeTimer_timeout"]
